
------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

FRONTEND
	Fixed: 404 error on user statistics page (reseller level)

BACKEND
	Fixed: Could not restore domain (undefined variable)

YOUTRACK
	Fixed: #IP-1386 Length of password generator is hardcoded
	Fixed: #IP-1388 phptmp removed on client update
	Fixed: #IP-1391 imscp_panel service can fail to start/restart when the APCU PHP extension is installed
	Fixed: #IP-1393: Unable to disable backup feature for existing domains
	Fixed: #IP-1394 httpd-logs-mngr starts before mysql.server started
	Fixed: #IP-1396 Deletion of a subdomain which has '/' as mount point deletes all web folders
	Fixed: #IP-1401 Courier pop3-ssl and imap-ssl don't work with Windows 10
	Fixed: #IP-1406 File not found - false error template
	Fixed: #IP-1417 Bug - When changing hostname using the panel_hostname reconfiguration option, The SSL dialog should be triggered
	Fixed: #IP-1452 pTemplate - reset static variable $_root_dir in /client/cert_view.php

------------------------------------------------------------------------------------------------------------------------
1.2.9
------------------------------------------------------------------------------------------------------------------------

2015-07-03: Laurent Declercq
	RELEASE i-MSCP 1.2.9

BACKEND
	Added: Dedicated server implementation for remote SQL server
	Added: NAMED_BNAME (named binary name) configuration parameter - Named (Bind9) server impl.
	Changed: Customers have now a full read access to their http logs, including those which were rotated
	Changed: Domain's logs are now mounted in customer's logs folder using bind mount instead of being copied
	Fixed: closedir() attempted on invalid dirhandle DIRH at line 312 (iMSCP::Dir)